--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.0.10",
+    "@types/react-datepicker": "^7.0.0",
     "apexcharts": "^4.5.0",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
@@ -46,6 +47,7 @@
     "react-activity-calendar": "^2.7.10",
     "react-apexcharts": "^1.7.0",
     "react-colorful": "^5.6.1",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-peeps": "^0.1.10",
