--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "@mui/styled-engine-sc": "^6.4.6",
+    "@mui/system": "^6.0.0",
     "@mui/x-charts": "^7.27.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -30,7 +31,6 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@reduxjs/toolkit": "^2.6.0",
-    "@tailwindcss/vite": "^4.0.10",
     "@types/react-datepicker": "^7.0.0",
     "apexcharts": "^4.5.0",
     "axios": "^1.8.1",
@@ -61,7 +61,7 @@
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.2",
     "tailwind-scrollbar-hide": "^2.0.0",
-    "tailwindcss": "^4.0.10",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.6.1"
   },
