--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/vite": "^4.1.3",
     "@types/react-datepicker": "^7.0.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "apexcharts": "^4.5.0",
     "axios": "^1.8.1",
