--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-datepicker": "^8.2.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-peeps": "^0.1.10",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
